test/testdata/list/index_blank_error.lox
var list = [];
// error: '_' cannot be used as a value
// lint error: '_' cannot be used as a value
print list[_];
